--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17-beta1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
