--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #logging.file=my.log
 logging.path=../log
 #*为报名，包底下的class文件都为这个级别  TRACE < DEBUG < INFO < WARN < ERROR。
-logging.level.root=DEBUG
+logging.level.root=INFO
 
 #mysql 配置
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
