--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ logging.level.root=INFO
 
 #mysql 配置
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://192.168.2.70:3306/rebot?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url = jdbc:mysql://120.79.197.22:3306/rebot?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = Apple1688!@#
 
 server.port: 8765
