--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,11 @@
 	</properties>
 
 	<dependencies>
-
+  
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-undertow</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
