--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		    <version>2.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
