--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 logging:
   level:
-    root: INFO
+    root: DEBUG
   path: ../log
 server:
   port: 8765
 spring:
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    password: admin1234
-    url: jdbc:mysql://127.0.0.1:3306/rebot?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false
+    password:  admin1234
+    url: jdbc:mysql://127.0.0.1:3306/rebot?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
     username: root
     type: org.apache.commons.dbcp2.BasicDataSource
     dbcp2:
@@ -33,4 +33,4 @@ pagehelper:
   reasonable: true
   
 rebot:
-  dhcp-client-cmd: E:\seadun\bin\dhcp_startup.bat
+  dhcp-client-cmd: d:\seadun\bin\dhcp_startup.bat
